# LedgerQt

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/ui/: main_window.cpp  main_window.hpp
tests/: CMakeLists.txt
